- Fixed bug #43182 (file_put_contents() LOCK_EX does not work properly on file 
  truncation). (Ilia)
- Fixed bug #43175 (__destruct() throwing an exception with __call() causes
  segfault). (Dmitry)
- Fixed bug #43105 (PHP seems to fail to close open files). (Hannes)
- Fixed bug #42978 (mismatch between number of bound params and values causes
  a crash in pdo_pgsql). (Ilia)
- Fixed bug #42937 (__call() method not invoked when methods are called on
  parent from child class). (Dmitry)
- Fixed bug #42736 (xmlrpc_server_call_method() crashes). (Tony)
- Fixed bug #42692 (Procedure 'int1' not present with doc/lit SoapServer).
  (Dmitry)
- Fixed bug #42548 (mysqli PROCEDURE calls can't return result sets). (hartmut)
- Fixed bug #42272 (var_export() incorrectly escapes char(0)). (Derick)
- Fixed bug #42261 (Incorrect lengths for date and boolean data types).
  (Ilia)
- Fixed bug #38468 (Unexpected creation of cycle). (Dmitry)

08 Nov 2007, PHP 5.2.5
- Upgraded PCRE to version 7.3 (Nuno)
- Added optional parameter $provide_object to debug_backtrace(). (Sebastian)
- Added alpha support for imagefilter() IMG_FILTER_COLORIZE. (Pierre)
- Added ability to control memory consumption between request using
  ZEND_MM_COMPACT environment variable. (Dmitry)

- Improved speed of array_intersect_key(), array_intersect_assoc(),
  array_uintersect_assoc(), array_diff_key(), array_diff_assoc() and
  array_udiff_assoc(). (Dmitry)

- Fixed move_uploaded_file() to always set file permissions of resulting file
  according to UMASK. (Andrew Sitnikov)
- Fixed possible crash in ext/soap because of uninitialized value. (Zdash Urf)
- Fixed regression in glob() when enforcing safe_mode/open_basedir checks on
  paths containing '*'. (Ilia)
- Fixed "mail.force_extra_parameters" php.ini directive not to be modifiable
  in .htaccess due to the security implications - reported by SecurityReason.
  (Stas)
- Fixed PDO crash when driver returns empty LOB stream. (Stas)